--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.29.0",
     "reactstrap": "^9.1.1",
     "remixicon": "^2.5.0",
+    "sass": "^1.53.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
