--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.3.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
