--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "canvas-confetti": "^1.5.1",
+    "dom-confetti": "^0.2.2",
     "firebase": "^9.9.1",
     "react": "^17.0.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.3.0",
     "react-paginate": "^8.1.3",
@@ -21,6 +24,8 @@
     "remixicon": "^2.5.0",
     "sass": "^1.53.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.4.24",
+    "validator": "^13.7.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
